k8s/apps/starbase-80/resources/web-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: config
          configMap:
            name: config
      containers:
        - name: starbase-80
          image: ghcr.io/notclickable-jordan/starbase-80:1.6.4@sha256:0000ccf33ef464d20096ac36e75a7878017783f5d2f0dc483ed14142413a7f74
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          securityContext:
            privileged: false
          volumeMounts:
            - name: config
              mountPath: /app/src/config/config.json
              subPath: config.json
              readOnly: true
          ports:
            - name: http
              containerPort: 4173
